# Brackeys2026DroneGame

./: .gitignore  build.bat  run.bat  settings.json  update_engine.bat
exec/: CMakeLists.txt
exec/include/game/: basic_frag.glsl  drone_frag.glsl  faded_frag.glsl  game.hpp  logic.hpp  render.hpp  renderStaticModels.hpp  snowworm.hpp  testDroneCharacter.hpp
exec/include/game/controllers/: droneController.hpp  fpsController.hpp
exec/lib/: SDL3.lib  SDL3_image.lib  SDL3_mixer.lib  SDL3_ttf.lib  bane.lib
exec/src/: glad.c  main.cpp
game/: CMakeLists.txt
game/include/SDL3/: SDL_revision.h
game/include/bane/: bane.hpp
game/include/bane/components/: bobject.hpp  camera.hpp  character.hpp  lightdata.hpp  staticmesh.hpp
game/include/bane/controllers/: icontroller.hpp  spectatorController.hpp  testCharController.hpp
game/include/bane/core/: scene.hpp
game/include/bane/data/: resource.hpp
game/include/bane/primitives/: animatedModel.hpp  assimpglmhelpers.hpp  instancedStaticMeshes.hpp  material.hpp  mesh.hpp  model.hpp  particle.hpp  pointLight.hpp  primitives.hpp  skybox.hpp  texture.hpp  transform.hpp  vertex.hpp
game/include/bane/scene/: sceneAABB.hpp  sceneCharacter.hpp  (+3 more)
game/include/game/: anim_vert.glsl  basic_frag.glsl  basic_vert.glsl  data.hpp  game.hpp  loadResources.hpp  settings.hpp  testDroneCharacter.hpp
game/include/glad/: glad.h
game/lib/: bane.lib
game/src/: game.cpp  loadResources.cpp  logic.cpp  render.cpp  renderStaticModels.cpp  snowworm.cpp  testDroneCharacter.cpp
game/src/controllers/: droneController.cpp  fpsController.cpp
(+37 files in other folders)
